--- a/css/style.css
+++ b/css/style.css
@@ -112,3 +112,23 @@ section.s5 h2 {
   font-weight: 400;
   text-align: center;
 }
+.menu {
+  background-color: rgba(51, 51, 51, 0.132);
+  border-radius: 5%;
+  width: 5%;
+  position: fixed;
+  top: 10%;
+  left: -4%;
+  transition: 0.6s;
+  text-align: center;
+}
+.menu p {
+  font-size: 1.8vw;
+  cursor: pointer;
+}
+.menu span {
+  font-size: 0.5em;
+}
+.menu:hover {
+  left: 1%;
+}
